--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lucide-react": "^0.316.0",
     "next": "^14.1.0",
     "next-themes": "^0.4.6",
+    "react-markdown": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
