--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
+node_modules/
+.next/
+out/
+dist/
+build/
+coverage/
+
+# env files
+.env
+.env.local
+.env.*.local
+
+# caches
+.turbo/
+.swc/
+.cache/
+.parcel-cache/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.code-workspace
+
+# TypeScript
+*.tsbuildinfo
+
+# Deployment
 .vercel
