--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "lucide-react": "^0.316.0",
     "next": "^14.1.0",
     "next-themes": "^0.4.6",
-    "react-markdown": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.19.14",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
@@ -31,7 +32,6 @@
     "eslint-config-next": "^14.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.2.0",
-    "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.9.2"
   }
